fix nav bar spacing

--- a/less/main.less
+++ b/less/main.less
@@ -32,7 +32,7 @@ body{
     width: 100%;
     ul {
         color: @color-text;
-        min-width: 320px;
+        min-width: 400px;
         li {
             .text-links();
             padding: 1%;
